domba - partners, new items

--- a/app/less/fonts.less
+++ b/app/less/fonts.less
@@ -1,8 +1,22 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Anton');
 
-//@import url('https://f/onts.googleapis.com/css?family=Roboto');
-//@import url('https://fonts.googleapis.com/css?family=Lobster');
-//@import url('https://fonts.googleapis.com/css?family=Titillium+Web:900&subset=latin,latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:700&subset=latin-ext');
+
+
 
 //font-family: 'Roboto', sans-serif;
-//font-family: 'Lobster', cursive;
-//font-family: 'Titillium Web', sans-serif;
+
+h1, h2, h3, h4 {
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.btn {
+  font-family: 'Ubuntu', sans-serif;
+}
+
+h1 {
+  @media @xs {
+    font-size: 26px;
+  }
+}
