--- a/app/less/main-menu.less
+++ b/app/less/main-menu.less
@@ -6,7 +6,8 @@
   left: 0;
   width: 100%;
   .transitions;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   padding-top: 90px;
 
