--- a/app/less/ui-elements/inputs.less
+++ b/app/less/ui-elements/inputs.less
@@ -1,19 +1,19 @@
-.form-group {
-  position: relative;
-
-  label {
-
-    position: absolute;
-    pointer-events: none;
-    left: 30px;
-    top: 8px;
-    transition: all 200ms linear;
-    font-size: 1.5em;
-  }
-
-  .form-control:focus + label {
-    color: white;
-    top: -18px;
-    font-size: 1em;
-  }
-}
+//.form-group {
+//  position: relative;
+//
+//  label {
+//
+//    position: absolute;
+//    pointer-events: none;
+//    left: 30px;
+//    top: 8px;
+//    transition: all 200ms linear;
+//    font-size: 1.5em;
+//  }
+//
+//  .form-control:focus + label {
+//    color: white;
+//    top: -18px;
+//    font-size: 1em;
+//  }
+//}
