--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -4,6 +4,9 @@
 
 
 //CTA
-@cta-message-color: white;
-@cta-bg: black;
+@cta-message-color: black;
+@cta-bg: lightgrey;
 @cta-time-delay-offset: 1000ms;
+//@cta-message-color: white;
+//@cta-bg: black;
+//@cta-time-delay-offset: 1000ms;
