--- a/app/less/main-menu.less
+++ b/app/less/main-menu.less
@@ -21,9 +21,6 @@
     //max-height: 400px;
   }
 
-  .search-area {
-    .delayed(300ms);
-  }
 
   .links-area {
     .delayed(400ms);
@@ -33,6 +30,69 @@
   &.top {
     padding-top: 100px;
   }
+}
+
+.main-menu-search-area {
+  .delayed(300ms);
+  .animated;
+  //.fadeInRight;
+
+  label { color: white; }
+
+  .make-xs-column(12);
+  .make-lg-column(5);
+
+  .open-search-btn {
+    .hidden-lg;
+
+    &:focus, &:active {
+      background: @primary-color;
+      border-color: @primary-color;
+      box-shadow: none;
+      outline: none;
+    }
+
+    text-align: left;
+
+    .fa-plus {
+      .transitions;
+      font-size: 24px;
+      position: absolute;
+      right: 30px;
+      top: 12px;
+    }
+
+    &:not(.collapsed) {
+      .fa-plus {
+        transform: rotate(45deg);
+      }
+    }
+  }
+
+  .form-holder {
+    margin: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background: @primary-color-dark;
+    //background: rgba(0, 0, 0, 0.5);
+    @media @xs {
+      background: @primary-color;
+    }
+
+    @media @lg {
+      display: block;
+    }
+  }
+
+  .search-btn {
+    .btn-primary;
+
+    @media @xs {
+      .btn-invert;
+
+    }
+  }
+
 }
 
 .search-area {
