--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -3,6 +3,11 @@
 @primary-color-dark: darken(@primary-color, 10%);
 
 
+@hero-overlay: rgba(0, 0, 0, 0.3);
+//@hero-overlay: rgba(163, 12, 12, 0.4);
+@hero-search-area-bg: rgba(0, 0, 0, 0.5);
+
+
 //CTA
 @cta-message-color: black;
 @cta-bg: lightgrey;
