--- a/app/less/fonts.less
+++ b/app/less/fonts.less
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css?family=Anton');
+@import url('https://fonts.googleapis.com/css?family=Pacifico');
 
 @import url('https://fonts.googleapis.com/css?family=Ubuntu:700&subset=latin-ext');
 
