--- a/app/less/main.less
+++ b/app/less/main.less
@@ -14,7 +14,8 @@
 //bootstrap slider
 @import "components-variables/bootstrap-slider";
 
-
+//ion slider
+@import "components-variables/ion-rangeSlider";
 
 //bootstrap select
 @import "../components/bootstrap-select/less/bootstrap-select";
