--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -3,9 +3,12 @@
 @primary-color-dark: darken(@primary-color, 10%);
 
 
-@hero-overlay: rgba(0, 0, 0, 0.3);
+
+//HERO
+@hero-overlay: rgba(0, 0, 0, 0.6);
 //@hero-overlay: rgba(163, 12, 12, 0.4);
 @hero-search-area-bg: rgba(0, 0, 0, 0.5);
+@hero-search-area-bg: transparent;
 
 
 //CTA
@@ -15,3 +18,6 @@
 //@cta-message-color: white;
 //@cta-bg: black;
 //@cta-time-delay-offset: 1000ms;
+
+//FEATURED
+@featured-bg: @primary-color;
