--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -1,5 +1,7 @@
 //@primary-color: #d40f0f;
+//@primary-color: #2b2b2b;
 @primary-color: #d40f0f;
+//@primary-color-dark: darkgrey;
 @primary-color-dark: darken(@primary-color, 10%);
 
 
@@ -21,3 +23,20 @@
 
 //FEATURED
 @featured-bg: @primary-color;
+@featured-overlay: rgba(0, 0, 0, 0.7);
+
+//PARTNERS
+@partners-bg: white;
+
+//FOOTER
+@footer-overlay: rgba(0, 0, 0, 0.9);
+@footer-bg: black;
+@footer-title-color: @primary-color;
+@footer-link-color: white;
+@footer-link-color-hover: @primary-color;
+@footer-contact-icon: darkgrey;
+@footer-social-fb: white;
+@footer-social-fb-hover: #4080ff;
+@footer-social-insta: white;
+@footer-social-insta-hover: #f48b38;
+
