--- a/app/less/partners.less
+++ b/app/less/partners.less
@@ -1,5 +1,31 @@
 .partners {
-  background: white;
+  position: relative;
+  background: @partners-bg;
+
+
+  //&:before {
+  //  display: block;
+  //  content: "";
+  //  position: absolute;
+  //  border-top: 100px solid transparent;
+  //  border-right: 3000px solid @partners-bg;
+  //  width: 100%;
+  //  height: 0;
+  //  top: -100px;
+  //  pointer-events: none;
+  //}
+  //&:after {
+  //  display: block;
+  //  content: "";
+  //  position: absolute;
+  //  border-top: 100px solid @partners-bg;
+  //  border-left: 3000px solid transparent;
+  //  width: 100%;
+  //  height: 0;
+  //  //top: -100px;
+  //  bottom: -100px;
+  //  pointer-events: none;
+  //}
 
   .image-wrapper {
     @media @xs { padding: 10px; }
@@ -12,6 +38,15 @@
     margin-bottom: 0;
   }
 
+  .slick-slide {
+    .transitions;
+    @media @xs {
+      &:not(.slick-active) {
+        opacity: 0.3;
+        .scale(0.7);
+      }
+    }
+  }
 }
 
 .partners-title {
