--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -25,11 +25,14 @@
 @featured-bg: @primary-color;
 @featured-overlay: rgba(0, 0, 0, 0.7);
 
+//NEW
+@new-overlay: rgba(255, 255, 255, 0.9);
+
 //PARTNERS
 @partners-bg: white;
 
 //FOOTER
-@footer-overlay: rgba(0, 0, 0, 0.9);
+@footer-overlay: rgba(0, 0, 0, 0.8);
 @footer-bg: black;
 @footer-title-color: @primary-color;
 @footer-link-color: white;
