domba - comments in code, variables

--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -1,25 +1,15 @@
-//@primary-color: #d40f0f;
-//@primary-color: #2b2b2b;
+//Main theme variables
 @primary-color: #d40f0f;
-//@primary-color-dark: darkgrey;
 @primary-color-dark: darken(@primary-color, 10%);
-
-
 
 //HERO
 @hero-overlay: rgba(0, 0, 0, 0.6);
-//@hero-overlay: rgba(163, 12, 12, 0.4);
-@hero-search-area-bg: rgba(0, 0, 0, 0.5);
 @hero-search-area-bg: transparent;
-
 
 //CTA
 @cta-message-color: black;
 @cta-bg: lightgrey;
 @cta-time-delay-offset: 1000ms;
-//@cta-message-color: white;
-//@cta-bg: black;
-//@cta-time-delay-offset: 1000ms;
 
 //FEATURED
 @featured-bg: @primary-color;
