--- a/app/less/featured.less
+++ b/app/less/featured.less
@@ -2,7 +2,7 @@
   background: @primary-color-dark;
   position: relative;
 
-  background: url("/images/jumbotron-bg-2.jpg");
+  background: url("/img/jumbotron-bg-2.jpg");
   background-position: center;
   background-attachment: fixed;
   -webkit-background-size: cover;
