--- a/app/less/jumbotron.less
+++ b/app/less/jumbotron.less
@@ -1,5 +1,5 @@
 .hero {
-  background: url("/images/jumbotron-bg-2.jpg");
+  background: url("/img/jumbotron-bg-2.jpg");
   background-position: center;
   background-attachment: fixed;
   -webkit-background-size: cover;
