--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -16,20 +16,20 @@
 @featured-overlay: rgba(0, 0, 0, 0.7);
 
 //NEW
-@new-overlay: rgba(255, 255, 255, 0.9);
+@new-overlay: rgba(255, 255, 255, 0.5);
 
 //PARTNERS
 @partners-bg: white;
 
 //FOOTER
-@footer-overlay: rgba(0, 0, 0, 0.8);
-@footer-bg: black;
+@footer-color: white;
 @footer-title-color: @primary-color;
+@footer-overlay: rgba(0, 0, 0, 0.8);
+
+@footer-bg: black;
 @footer-link-color: white;
 @footer-link-color-hover: @primary-color;
 @footer-contact-icon: darkgrey;
-@footer-social-fb: white;
 @footer-social-fb-hover: #4080ff;
-@footer-social-insta: white;
 @footer-social-insta-hover: #f48b38;
 
